--- a/src/vspostman/Dialog/ApiTestWindow.xaml
+++ b/src/vspostman/Dialog/ApiTestWindow.xaml
@@ -1,12 +1,22 @@
-﻿<local:BaseDialogWindow x:Class="vspostman.Dialog.ApiTestWindow"
+﻿<local:BaseDialogWindow x:Class="VsPostman.Dialog.ApiTestWindow"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:vspostman.Dialog"
+             xmlns:local="clr-namespace:VsPostman.Dialog"
+            xmlns:System="clr-namespace:System;assembly=mscorlib"
+            xmlns:StyleAlias="clr-namespace:VsPostman.HttpRequest"
              mc:Ignorable="d" 
              Title="VS Postman Lite"
              d:DesignHeight="450" d:DesignWidth="800">
+    <local:BaseDialogWindow.Resources>
+        <ObjectDataProvider x:Key="dataFromEnum" MethodName="GetValues"
+                            ObjectType="{x:Type System:Enum}">
+            <ObjectDataProvider.MethodParameters>
+                <x:Type TypeName="StyleAlias:eRequestType"/>
+            </ObjectDataProvider.MethodParameters>
+        </ObjectDataProvider>
+    </local:BaseDialogWindow.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="40"></RowDefinition>
@@ -22,8 +32,8 @@
                 <ColumnDefinition Width="*"></ColumnDefinition>
                 <ColumnDefinition Width="100"></ColumnDefinition>
             </Grid.ColumnDefinitions>
-            
-            <ComboBox Grid.Column="0"></ComboBox>
+
+            <ComboBox Grid.Column="0" ItemsSource="{Binding Source={StaticResource dataFromEnum}}"></ComboBox>
             <Label Grid.Column="1" Content="Url"></Label>
             <TextBox Grid.Column="2" Text="Test Url" FontStyle="Italic"></TextBox>
             <Button Grid.Column="3" Content="Send"></Button>
