--- a/src/vspostman/Dialog/ApiTestWindow.xaml
+++ b/src/vspostman/Dialog/ApiTestWindow.xaml
@@ -10,6 +10,13 @@
              Title="VS Postman Lite"
              d:DesignHeight="450" d:DesignWidth="800">
     <local:BaseDialogWindow.Resources>
+        <Style x:Key="MediumButton" TargetType="Button">
+            <Setter Property="Width" Value="100"/>
+        </Style>
+        <Style x:Key="ToggleButton" TargetType="ToggleButton">
+            <Setter Property="Width" Value="50"/>
+            <Setter Property="Margin" Value="0,10,0,10"></Setter>
+        </Style>
         <ObjectDataProvider x:Key="dataFromEnum" MethodName="GetValues"
                             ObjectType="{x:Type System:Enum}">
             <ObjectDataProvider.MethodParameters>
@@ -17,7 +24,7 @@
             </ObjectDataProvider.MethodParameters>
         </ObjectDataProvider>
     </local:BaseDialogWindow.Resources>
-    <Grid>
+    <Grid Margin="10,10,10,10">
         <Grid.RowDefinitions>
             <RowDefinition Height="40"></RowDefinition>
             <RowDefinition Height="40"></RowDefinition>
@@ -25,7 +32,7 @@
             <RowDefinition Height="*"></RowDefinition>
         </Grid.RowDefinitions>
         <Label Grid.Column="0" Grid.Row="0"  Content="VS Postman Lite" FontWeight="Bold"></Label>
-        <Grid Grid.Column="0" Grid.Row="1" Margin="10,10,10,0">
+        <Grid Grid.Column="0" Grid.Row="1" >
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="100"></ColumnDefinition>
                 <ColumnDefinition Width="50"></ColumnDefinition>
@@ -36,15 +43,17 @@
             <ComboBox Grid.Column="0" ItemsSource="{Binding Source={StaticResource dataFromEnum}}"></ComboBox>
             <Label Grid.Column="1" Content="Url"></Label>
             <TextBox Grid.Column="2" Text="Test Url" FontStyle="Italic"></TextBox>
-            <Button Grid.Column="3" Content="Send"></Button>
+            <Button Grid.Column="3" Content="Send" Style="{StaticResource MediumButton}"></Button>
                 </Grid>
         <StackPanel Orientation="Horizontal" Grid.Column="0"  Grid.Row="2" HorizontalAlignment="Right" >
-            <ToggleButton Content="JSON"></ToggleButton>
-            <ToggleButton Content="XAML"></ToggleButton>
+            <ToggleButton Content="JSON" Style="{StaticResource ToggleButton}"></ToggleButton>
+            <ToggleButton Content="XAML" Style="{StaticResource ToggleButton}"></ToggleButton>
         </StackPanel>
         
         <TabControl Grid.Column="0" Grid.Row="3">
-            <TabItem Header="Pretty"></TabItem>
+            <TabItem Header="Pretty">
+                <TextBlock></TextBlock>
+            </TabItem>
             <TabItem Header="Raw"></TabItem>
             <TabItem Header="Preview"></TabItem>
         </TabControl>
