--- a/src/vspostman/Dialog/ApiTestWindow.xaml
+++ b/src/vspostman/Dialog/ApiTestWindow.xaml
@@ -27,7 +27,7 @@
     <Grid Margin="10,10,10,10">
         <Grid.RowDefinitions>
             <RowDefinition Height="40"></RowDefinition>
-            <RowDefinition Height="40"></RowDefinition>
+            <RowDefinition Height="25"></RowDefinition>
             <RowDefinition Height="40"></RowDefinition>
             <RowDefinition Height="*"></RowDefinition>
             <RowDefinition Height="*"></RowDefinition>
@@ -41,10 +41,10 @@
                 <ColumnDefinition Width="100"></ColumnDefinition>
             </Grid.ColumnDefinitions>
 
-            <ComboBox Grid.Column="0" ItemsSource="{Binding Source={StaticResource dataFromEnum}}"></ComboBox>
+            <ComboBox Grid.Column="0" ItemsSource="{Binding Source={StaticResource dataFromEnum}}" x:Name="httpType"></ComboBox>
             <Label Grid.Column="1" Content="Url"></Label>
-            <TextBox Grid.Column="2" Text="Test Url" FontStyle="Italic"></TextBox>
-            <Button Grid.Column="3" Content="Send" Style="{StaticResource MediumButton}"></Button>
+            <TextBox Grid.Column="2" Text="Test Url" FontStyle="Italic" x:Name="requestedUrl"></TextBox>
+            <Button Grid.Column="3" Content="Send" Style="{StaticResource MediumButton}" Click="SendRequest"></Button>
                 </Grid>
         <StackPanel Orientation="Horizontal" Grid.Column="0"  Grid.Row="2" HorizontalAlignment="Right" >
             <ToggleButton Content="JSON" Style="{StaticResource ToggleButton}"></ToggleButton>
