--- a/src/vspostman/PostmanToolWindowControl.xaml
+++ b/src/vspostman/PostmanToolWindowControl.xaml
@@ -17,7 +17,7 @@
         </Style>
         <Style x:Key="ToggleButton" TargetType="ToggleButton">
             <Setter Property="Width" Value="50"/>
-            <Setter Property="Margin" Value="0,10,0,10"></Setter>
+            <Setter Property="Margin" Value="0,10,0,10"/>
         </Style>
         <ObjectDataProvider x:Key="dataFromEnum" MethodName="GetValues"
                             ObjectType="{x:Type System:Enum}">
@@ -29,40 +29,62 @@
     <Grid>
 
         <Grid.RowDefinitions>
-            <RowDefinition Height="40"></RowDefinition>
-            <RowDefinition Height="25"></RowDefinition>
-            <RowDefinition Height="40"></RowDefinition>
-            <RowDefinition Height="*"></RowDefinition>
-            <RowDefinition Height="*"></RowDefinition>
+            <RowDefinition Height="40"/>
+            <RowDefinition Height="25"/>
+            <RowDefinition Height="40"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <Label Grid.Column="0" Grid.Row="0"  Content="VS Postman Lite" FontWeight="Bold"></Label>
+        <Label Grid.Column="0" Grid.Row="0"  Content="VS Postman Lite" FontWeight="Bold"/>
         <Grid Grid.Column="0" Grid.Row="1" >
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="100"></ColumnDefinition>
-                <ColumnDefinition Width="50"></ColumnDefinition>
-                <ColumnDefinition Width="*"></ColumnDefinition>
-                <ColumnDefinition Width="100"></ColumnDefinition>
+                <ColumnDefinition Width="100"/>
+                <ColumnDefinition Width="50"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="100"/>
             </Grid.ColumnDefinitions>
 
-            <ComboBox Grid.Column="0" ItemsSource="{Binding Source={StaticResource dataFromEnum}}" x:Name="httpType"></ComboBox>
-            <Label Grid.Column="1" Content="Url"></Label>
-            <TextBox Grid.Column="2" Text="Test Url" FontStyle="Italic" x:Name="requestedUrl"></TextBox>
-            <Button Grid.Column="3" Content="Send" Style="{StaticResource MediumButton}" Click="SendRequest"></Button>
+            <ComboBox Grid.Column="0" ItemsSource="{Binding Source={StaticResource dataFromEnum}}" x:Name="httpType"/>
+            <Label Grid.Column="1" Content="Url"/>
+            <TextBox Grid.Column="2" Text="Test Url" FontStyle="Italic" x:Name="requestedUrl"/>
+            <Button Grid.Column="3" Content="Send" Style="{StaticResource MediumButton}" Click="SendRequest"/>
         </Grid>
         <StackPanel Orientation="Horizontal" Grid.Column="0"  Grid.Row="2" HorizontalAlignment="Right" >
-            <ToggleButton Content="JSON" Style="{StaticResource ToggleButton}"></ToggleButton>
-            <ToggleButton Content="XAML" Style="{StaticResource ToggleButton}"></ToggleButton>
+            <ToggleButton Content="JSON" Style="{StaticResource ToggleButton}"/>
+            <ToggleButton Content="XAML" Style="{StaticResource ToggleButton}"/>
         </StackPanel>
         <TabControl Grid.Column="0" Grid.Row="3">
-            <TabItem Header="Authorization"></TabItem>
-            <TabItem Header="Headers"></TabItem>
-            <TabItem Header="Body"></TabItem>
-            <TabItem Header="Prerequest Scripts"></TabItem>
+            <TabItem Header="Authorization"/>
+            <TabItem Header="Headers"/>
+            <TabItem Header="Body"/>
+            <TabItem Header="Prerequest Scripts"/>
             <TabItem Header="Url Params">
                 <Grid>
-                    
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="Auto"/>
+                    </Grid.RowDefinitions>
+                    <DataGrid Grid.Row="0" Name="dgUrlParams" AutoGenerateColumns="False">
+                        <DataGrid.Columns>
+                            <DataGridTextColumn Header="Key" Binding="{Binding Name}" />
+                            <DataGridTemplateColumn Header="Value">
+                                <DataGridTemplateColumn.CellTemplate>
+                                    <DataTemplate>
+                                        <TextBox Text="test"/>
+                                    </DataTemplate>
+                                </DataGridTemplateColumn.CellTemplate>
+                            </DataGridTemplateColumn>
+                        </DataGrid.Columns>
+                    </DataGrid>
+
+                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Left">
+                        <Button Grid.Row="1" Content="+" Width="30" Height="30" HorizontalAlignment="Left"></Button>
+                        <Button Grid.Row="1" Content="-" Width="30" Height="30" HorizontalAlignment="Left"></Button>
+                    </StackPanel>
                 </Grid>
+
             </TabItem>
+
         </TabControl>
 
         <TabControl Grid.Column="0" Grid.Row="4">
