--- a/src/vspostman/PostmanToolWindowControl.xaml
+++ b/src/vspostman/PostmanToolWindowControl.xaml
@@ -33,6 +33,7 @@
             <RowDefinition Height="25"/>
             <RowDefinition Height="40"/>
             <RowDefinition Height="*"/>
+            <RowDefinition Height="25"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <Label Grid.Column="0" Grid.Row="0"  Content="VS Postman Lite" FontWeight="Bold"/>
@@ -86,8 +87,8 @@
             </TabItem>
 
         </TabControl>
-
-        <TabControl Grid.Column="0" Grid.Row="4">
+        <Label Grid.Row="4" x:Name="statusText" HorizontalAlignment="Right"  Content="Pending"></Label>
+        <TabControl Grid.Column="0" Grid.Row="5">
             <TabItem Header="Body"></TabItem>
             <TabItem Header="Cookies"></TabItem>
             <TabItem Header="Headers"></TabItem>
