--- a/src/vspostman/Controls/ResponseBody.xaml
+++ b/src/vspostman/Controls/ResponseBody.xaml
@@ -8,7 +8,7 @@
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="20"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
@@ -19,7 +19,7 @@
         </StackPanel>
 
         <StackPanel Grid.Row="1">
-            <TextBox VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Text="asdasd"></TextBox>
+            <TextBlock TextWrapping="Wrap" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" x:Name="responsePretty"/>
         </StackPanel>
     </Grid>
 </UserControl>
