Updated ResponseHeader with DataGrid

--- a/src/vspostman/Controls/ResponseHeader.xaml
+++ b/src/vspostman/Controls/ResponseHeader.xaml
@@ -7,6 +7,11 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-        <TextBlock x:Name="responseHeaders"/>
+        <DataGrid x:Name="dgHeaders" AutoGenerateColumns="False" IsReadOnly="True" CanUserAddRows="False" CanUserDeleteRows="False">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="Header" Binding="{Binding Key}" />
+                <DataGridTextColumn Header="Value" Binding="{Binding Value}" />
+            </DataGrid.Columns>
+        </DataGrid>
     </Grid>
 </UserControl>
