--- a/src/vspostman/Controls/Response/ResponseHeader.xaml
+++ b/src/vspostman/Controls/Response/ResponseHeader.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="VsPostman.Controls.ResponseHeader"
+﻿<local:ResponseBase x:Class="VsPostman.Controls.Response.ResponseHeader"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:VsPostman.Controls"
+             xmlns:local="clr-namespace:VsPostman.Controls.Response"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
@@ -14,4 +14,4 @@
             </DataGrid.Columns>
         </DataGrid>
     </Grid>
-</UserControl>
+</local:ResponseBase>
