--- a/src/vspostman/PostmanToolWindowControl.xaml
+++ b/src/vspostman/PostmanToolWindowControl.xaml
@@ -7,6 +7,7 @@
             xmlns:StyleAlias="clr-namespace:VsPostman.HttpRequest"
              xmlns:vm="clr-namespace:VsPostman"
              xmlns:ResponseControls="clr-namespace:VsPostman.Controls.Response"
+             xmlns:rp="clr-namespace:VsPostman.Behaviors"
              mc:Ignorable="d"
              d:DataContext="{d:DesignInstance {x:Type vm:PostmanToolWindowControlViewModel},  IsDesignTimeCreatable=True}"
              d:DesignHeight="300" d:DesignWidth="300" 
@@ -89,7 +90,7 @@
         <Label Grid.Row="4" x:Name="statusText" HorizontalAlignment="Right"  Content="{Binding Status}"></Label>
         <TabControl Grid.Column="0" Grid.Row="5">
             <TabItem Header="Body">
-                <ResponseControls:ResponseHeader x:Name="responseBody" Response="{Binding Response}"/>
+                <ResponseControls:ResponseHeader x:Name="responseBody" rp:ResponseProperties.Response="{Binding Result,Mode=TwoWay}"/>
             </TabItem>
             <TabItem Header="Cookies"></TabItem>
             <TabItem Header="Headers">
