--- a/src/vspostman/PostmanToolWindowControl.xaml
+++ b/src/vspostman/PostmanToolWindowControl.xaml
@@ -90,11 +90,11 @@
         <Label Grid.Row="4" x:Name="statusText" HorizontalAlignment="Right"  Content="{Binding Status}"></Label>
         <TabControl Grid.Column="0" Grid.Row="5">
             <TabItem Header="Body">
-                <ResponseControls:ResponseHeader x:Name="responseBody" rp:ResponseProperties.Response="{Binding Result,Mode=TwoWay}"/>
+                <ResponseControls:ResponseBody  rp:ResponseProperties.Response="{Binding Result,Mode=TwoWay}"/>
             </TabItem>
             <TabItem Header="Cookies"></TabItem>
             <TabItem Header="Headers">
-                <ResponseControls:ResponseHeader  x:Name="responseHeaders"></ResponseControls:ResponseHeader>
+                <ResponseControls:ResponseHeader  rp:ResponseProperties.Response="{Binding Result,Mode=TwoWay}"/>
             </TabItem>
         </TabControl>
     </Grid>
