--- a/src/vspostman/PostmanToolWindowControl.xaml
+++ b/src/vspostman/PostmanToolWindowControl.xaml
@@ -40,15 +40,14 @@
         <Grid Grid.Column="0" Grid.Row="1" >
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="100"/>
-                <ColumnDefinition Width="50"/>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="100"/>
             </Grid.ColumnDefinitions>
 
             <ComboBox Grid.Column="0" ItemsSource="{Binding Source={StaticResource dataFromEnum}}" IsSynchronizedWithCurrentItem="True" SelectedItem="{Binding RequestType,UpdateSourceTrigger=PropertyChanged}" x:Name="httpType"/>
-            <Label Grid.Column="1" Content="Url" HorizontalAlignment="Right"/>
-            <Grid Grid.Column="2" VerticalAlignment="Center" >
-                <TextBox Grid.Column="2" Text="{Binding Url,UpdateSourceTrigger=PropertyChanged}" FontStyle="Italic" x:Name="requestedUrl"   />
+            <Grid Grid.Column="1" VerticalAlignment="Center" >
+                <TextBox Grid.Column="2" Text="{Binding Url,UpdateSourceTrigger=PropertyChanged}" 
+                         VerticalAlignment="Center" VerticalContentAlignment="Center" x:Name="requestedUrl" Height="{Binding ElementName=httpType, Path=ActualHeight}"  />
                 <TextBlock IsHitTestVisible="False" Text="Enter Url Here" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="10,0,0,0" Foreground="DarkGray">
                     <TextBlock.Style>
                         <Style TargetType="{x:Type TextBlock}">
@@ -63,7 +62,7 @@
                 </TextBlock>
             </Grid>
            
-            <Button Grid.Column="3" Content="Send" Style="{StaticResource MediumButton}" Command="{Binding SendRequestCommand}" />
+            <Button Grid.Column="2" Content="Send" Style="{StaticResource MediumButton}" Command="{Binding SendRequestCommand}" />
         </Grid>
         <StackPanel Orientation="Horizontal" Grid.Column="0"  Grid.Row="2" HorizontalAlignment="Right" >
             <ToggleButton Content="JSON" Style="{StaticResource ToggleButton}"/>
