--- a/src/vspostman/PostmanToolWindowControl.xaml
+++ b/src/vspostman/PostmanToolWindowControl.xaml
@@ -116,7 +116,8 @@
             </TabItem>
 
         </TabControl>
-        <Label Grid.Row="4" x:Name="statusText" HorizontalAlignment="Right"  Content="{Binding Status}"></Label>
+        
+        <ResponseControls:ResponseStatus Grid.Row="4" rp:ResponseProperties.Response="{Binding Result,Mode=TwoWay}" HorizontalAlignment="Right"/>
         <TabControl Grid.Column="0" Grid.Row="5">
             <TabItem Header="Body">
                 <ResponseControls:ResponseBody  rp:ResponseProperties.Response="{Binding Result,Mode=TwoWay}"/>
