--- a/src/vspostman/PostmanToolWindowControl.xaml
+++ b/src/vspostman/PostmanToolWindowControl.xaml
@@ -66,7 +66,7 @@
         </Grid>
         <StackPanel Orientation="Horizontal" Grid.Column="0"  Grid.Row="2" HorizontalAlignment="Right" >
             <ToggleButton Content="JSON" Style="{StaticResource ToggleButton}"/>
-            <ToggleButton Content="XAML" Style="{StaticResource ToggleButton}"/>
+            <ToggleButton Content="XML" Style="{StaticResource ToggleButton}"/>
         </StackPanel>
         <TabControl Grid.Column="0" Grid.Row="3">
             <TabItem Header="Authorization"/>
