--- a/src/vspostman/Controls/Response/ResponseHeader.xaml
+++ b/src/vspostman/Controls/Response/ResponseHeader.xaml
@@ -5,9 +5,10 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:VsPostman.Controls.Response"
              mc:Ignorable="d" 
+             x:Name="ResponseHeaderControl"
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-        <DataGrid x:Name="dgHeaders" AutoGenerateColumns="False" IsReadOnly="True" CanUserAddRows="False" CanUserDeleteRows="False">
+        <DataGrid x:Name="dgHeaders" ColumnWidth="30" AutoGenerateColumns="False" IsReadOnly="True" CanUserAddRows="False" CanUserDeleteRows="False" ItemsSource="{Binding ElementName=ResponseHeaderControl,Path=Response.HeaderCollection}">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Header" Binding="{Binding Key}" />
                 <DataGridTextColumn Header="Value" Binding="{Binding Value}" />
