--- a/src/vspostman/Controls/Response/ResponseBody.xaml
+++ b/src/vspostman/Controls/Response/ResponseBody.xaml
@@ -4,9 +4,10 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:VsPostman.Controls.Response"
+             x:Name="ResponseBodyControl"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-        <TextBlock x:Name="txtResponseBody"/>
+        <TextBlock x:Name="txtResponseBody" Text="{Binding ElementName=ResponseBodyControl,Path=Response.ResponseString}"/>
     </Grid>
 </local:ResponseBase>
