--- a/src/vspostman/Controls/Response/ResponseStatus.xaml
+++ b/src/vspostman/Controls/Response/ResponseStatus.xaml
@@ -5,13 +5,22 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:VsPostman.Controls.Response"
              mc:Ignorable="d" 
+             x:Name="ResponseStatusControl"
              xmlns:vc="clr-namespace:VsPostman.Convertor"
              d:DesignHeight="450" d:DesignWidth="800">
     <local:ResponseBase.Resources>
-        <!--<vc:IsStatusValidConvertor x:Key="StatusConvertor"></vc:IsStatusValidConvertor>-->
+        <vc:IsStatusValidConvertor x:Key="StatusConvertor"></vc:IsStatusValidConvertor>
         <Style TargetType="TextBlock" x:Key="Normal">
             <Setter Property="Foreground" Value="Black" />
             <Setter Property="Margin" Value="5,0,2,0"/>
+            <Style.Triggers>
+                <DataTrigger Binding="{Binding ElementName=ResponseStatusControl,Path=Response,Converter={vc:ResponseToVisibilityConvertor}}" Value="Hidden">
+                    <Setter Property="Visibility" Value="Hidden"/>
+                </DataTrigger>
+                <DataTrigger Binding="{Binding ElementName=ResponseStatusControl,Path=Response,Converter={vc:ResponseToVisibilityConvertor}}" Value="Visible">
+                    <Setter Property="Visibility" Value="Visible"/>
+                </DataTrigger>
+            </Style.Triggers>
         </Style>
 
         <Style TargetType="TextBlock" x:Key="OnValue">
@@ -27,13 +36,13 @@
     </local:ResponseBase.Resources>
 
     <Grid>
-        <StackPanel x:Name="statusPanel" Orientation="Horizontal" HorizontalAlignment="Right" Visibility="Hidden">
-            <TextBlock Text="Status" Style="{StaticResource Normal}"></TextBlock>
-            <TextBlock x:Name="StatusResult" Style="{StaticResource OnValue}"></TextBlock>
-            <TextBlock Text="Time" Style="{StaticResource Normal}"></TextBlock>
-            <TextBlock x:Name="Time" Style="{StaticResource OnValue}"></TextBlock>
-            <TextBlock Text="Size" Style="{StaticResource Normal}"></TextBlock>
-            <TextBlock x:Name="Size" Style="{StaticResource OnValue}"></TextBlock>
+        <StackPanel x:Name="statusPanel" Orientation="Horizontal" HorizontalAlignment="Right" Visibility="Visible">
+            <TextBlock Style="{StaticResource Normal}" Text=" Status: "/>
+            <TextBlock x:Name="StatusResult" Style="{StaticResource OnValue}" Text="{Binding ElementName=ResponseStatusControl,Path=Response.StatusCode, StringFormat={}{0:D} {0}\&#x20;}"/>
+            <TextBlock Style="{StaticResource Normal}" Text=" Time: "/>
+            <TextBlock Style="{StaticResource OnValue}" Text="{Binding ElementName=ResponseStatusControl,Path=Response.ResponseTime,StringFormat={}{0:ff} ms\&#x20;}"/>
+            <TextBlock Style="{StaticResource Normal}" Text=" Size: "/>
+            <TextBlock Style="{StaticResource OnValue}" Text="{Binding ElementName=ResponseStatusControl,Path=Response.Length,StringFormat={}{0:D} B}"/>
         </StackPanel>  
     </Grid>
 </local:ResponseBase>
